--- a/menu_others.html
+++ b/menu_others.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" >
 <title>Daldal Coffee</title>
 
-<link rel="stylesheet" type="text/css" href="css/css_menu.css">
+<link rel="stylesheet" type="text/css" href="css/css_menu_others.css">
 <link rel="stylesheet" type="text/css" href="css/mouseover.css">
 
 <!--폰트-->
